--- a/argos/controllers/crazyflie/CMakeLists.txt
+++ b/argos/controllers/crazyflie/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(crazyflie SHARED
 target_compile_features(crazyflie PRIVATE cxx_std_17)
 
 target_link_libraries(crazyflie
+  utils
   argos3core_simulator
   argos3plugin_simulator_crazyflie
   argos3plugin_simulator_genericrobot)
