--- a/argos/utils/CMakeLists.txt
+++ b/argos/utils/CMakeLists.txt
@@ -1,9 +1,9 @@
 include_directories(${CMAKE_SOURCE_DIR})
 
 add_library(utils SHARED
-  log_name_event.h
-  log_name_event.cpp
-  param_name_event.h
-  param_name_event.cpp)
+  log_name.h
+  log_name.cpp
+  param_name.h
+  param_name.cpp)
 
 target_compile_features(utils PRIVATE cxx_std_17)
