Split server service in docker-compose.yml for Crazyflie and ARGoS configs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,14 @@
 version: "3.8"
 
+x-server:
+    &server-base
+    build: ./server
+    image: hivexplore/server
+    ports:
+        - 5678:5678
+    volumes:
+        - logs:/hivexplore/logs # TODO: Change server code to use different directory (env variable maybe?)
+
 services:
     client:
         build: ./client
@@ -7,21 +16,23 @@ services:
         ports:
             - 3995:80
 
-    server:
-        build: ./server
-        image: hivexplore/server
-        command: argos # TODO: Crazyflie vs ARGoS args? How to pass args to Docker Compose?
-        ports:
-            - 5678:5678
+    server_crazyflie:
+        << : *server-base
+        profiles: ["crazyflie"]
+        devices:
+            - /dev/bus/usb
+
+    server_argos:
+        << : *server-base
+        profiles: ["argos"]
+        command: argos
         volumes:
             - socket:/tmp/hivexplore # TODO: Document this directory # TODO: Check if /tmp/ is conventional for socket location inside container
-            - logs:/hivexplore/logs # TODO: Change server code to use different directory (env variable maybe?)
-        devices:
-            - /dev/bus/usb # TODO: Only if Crazyflie profile # TODO: Test
 
     argos:
         build: ./argos
         image: hivexplore/argos
+        profiles: ["argos"]
         volumes:
             - $XSOCKET:$XSOCKET
             - $XAUTHORITY:$XAUTHORITY
@@ -36,3 +47,4 @@ volumes:
     # TODO: Rename volumes?
     # TODO: Multiple volumes or one volume?
     # TODO: Fix permission issue, maybe this link: https://stackoverflow.com/questions/24288616/permission-denied-on-accessing-host-directory-in-docker
+    # TODO: Profiles?
