--- a/server/setup.cfg
+++ b/server/setup.cfg
@@ -18,6 +18,9 @@ max-line-length=140
 [pylint.MISCELLANEOUS]
 notes=
 
+[pylint.SIMILARITIES]
+ignore-imports=yes
+
 [yapf]
 based_on_style = pep8
 column_limit = 140
