--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -26,5 +26,6 @@ RUN pytest
 FROM base AS prod
 RUN pip3 install -r requirements/prod.txt
 COPY server server
+COPY config config
 EXPOSE 5678
 ENTRYPOINT [ "python3", "-u", "-m", "server.main" ]
