Set demo config

--- a/server/config/crazyflies_config.json
+++ b/server/config/crazyflies_config.json
@@ -1,15 +1,57 @@
 {
     "radio://0/80/2M/E7E7E7E701": {
         "baseOffset": {
-            "x": 0,
-            "y": 0.3,
+            "x": 1.5,
+            "y": 1.5,
             "z": 0
         }
     },
     "radio://0/80/2M/E7E7E7E702": {
         "baseOffset": {
+            "x": 1.5,
+            "y": 0,
+            "z": 0
+        }
+    },
+    "radio://0/80/2M/E7E7E7E703": {
+        "baseOffset": {
+            "x": 1.5,
+            "y": -1.5,
+            "z": 0
+        }
+    },
+    "radio://0/80/2M/E7E7E7E704": {
+        "baseOffset": {
             "x": 0,
-            "y": -0.3,
+            "y": -1.5,
+            "z": 0
+        }
+    },
+    "radio://0/80/2M/E7E7E7E705": {
+        "baseOffset": {
+            "x": -1.5,
+            "y": -1.5,
+            "z": 0
+        }
+    },
+    "radio://0/80/2M/E7E7E7E706": {
+        "baseOffset": {
+            "x": -1.5,
+            "y": 0,
+            "z": 0
+        }
+    },
+    "radio://0/80/2M/E7E7E7E707": {
+        "baseOffset": {
+            "x": -1.5,
+            "y": 1.5,
+            "z": 0
+        }
+    },
+    "radio://0/80/2M/E7E7E7E708": {
+        "baseOffset": {
+            "x": 0,
+            "y": 1.5,
             "z": 0
         }
     }
