Update .dockerignore files to match .gitignore and expected entries
- Make .dockerignore files match the contents of .gitignore files
- Add Git- and Docker-related files to .dockerignore files
- Update formatting for Dockerfile CMD instruction

--- a/argos/.dockerignore
+++ b/argos/.dockerignore
@@ -1,5 +1,12 @@
-# CMake build directory
-**/build/
+# Git
+**/.gitignore
+
+# Docker
+**/Dockerfile
+**/.dockerignore
+
+# Build output
+**/build
 
 # VS Code
 **/.vscode
