--- a/drone/Dockerfile
+++ b/drone/Dockerfile
@@ -9,6 +9,7 @@ RUN apt-get update && apt-get install -y \
     make \
     python3 \
     python3-pip
+RUN pip install --upgrade pip
 COPY requirements.txt .
 RUN pip3 install -r requirements.txt
 COPY . .
